--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,37 @@
-asgiref==3.4.1
-certifi==2021.10.8
-charset-normalizer==2.0.7
-dj-database-url==0.5.0
-Django==3.2.9
-django-heroku==0.3.1
-gunicorn==20.1.0
-idna==3.3
-Pillow==8.4.0
-psycopg2==2.9.1
-pytz==2021.3
-requests==2.26.0
-sqlparse==0.4.2
-urllib3==1.26.7
-whitenoise==5.3.0
+aiohttp==3.6.3
+appdirs==1.4.4
+astroid==2.4.2
+async-timeout==3.0.1
+attrs==20.3.0
+certifi==2020.12.5
+chardet==3.0.4
+click==8.0.1
+colorama==0.4.3
+discord.py==1.5.1
+distlib==0.3.1
+filelock==3.0.12
+flake8==3.8.3
+idna==2.10
+isort==4.3.21
+itsdangerous==2.0.1
+Jinja2==3.0.1
+lazy-object-proxy==1.4.3
+MarkupSafe==2.0.1
+mccabe==0.6.1
+multidict==4.7.6
+mysql-connector-python==8.0.22
+pep8==1.7.1
+protobuf==3.14.0
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pygame==1.9.6
+pylint==2.5.3
+python-dotenv==0.19.2
+requests==2.25.1
+six==1.15.0
+toml==0.10.1
+urllib3==1.26.2
+virtualenv==20.0.31
+Werkzeug==2.0.1
+wrapt==1.12.1
+yarl==1.5.1
