--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,9 @@ python-dotenv==0.19.2
 requests==2.25.1
 six==1.15.0
 toml==0.10.1
+urllib3==1.26.2
 virtualenv==20.0.31
 Werkzeug==2.0.1
+whitenoise==5.3.0
 wrapt==1.12.1
 yarl==1.5.1
